added some styles and a button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1 id="h1">Welcome to my website</h1>
+    <h2 id="h2">My name is rohan chinna</h2>
+    <h3 id="h3">This website is made by me</h3>
+    <button id="btn">Click here</button>
 </body>
 </html>
